--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'">
   <title>Stack Windows</title>
   <style>
     * {
@@ -10,6 +12,7 @@
       padding: 0;
       box-sizing: border-box;
     }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
       background: #000;
@@ -20,21 +23,25 @@
       flex-direction: column;
       user-select: none;
     }
+
     .header {
       padding: 12px;
       border-bottom: 1px solid #333;
       -webkit-app-region: drag;
     }
+
     .header h1 {
       font-size: 14px;
       font-weight: 600;
       letter-spacing: 0.5px;
     }
+
     .header .subtitle {
       font-size: 10px;
       color: #666;
       margin-top: 2px;
     }
+
     .status-bar {
       padding: 6px 12px;
       font-size: 10px;
@@ -43,9 +50,11 @@
       text-align: center;
       -webkit-app-region: no-drag;
     }
+
     .status-bar .hint {
       color: #4a4;
     }
+
     .section {
       flex: 1;
       display: flex;
@@ -53,6 +62,7 @@
       overflow: hidden;
       min-height: 0;
     }
+
     .section-header {
       padding: 8px 12px;
       font-size: 11px;
@@ -66,6 +76,7 @@
       align-items: center;
       -webkit-app-region: no-drag;
     }
+
     .section-header button {
       background: none;
       border: 1px solid #444;
@@ -75,15 +86,18 @@
       cursor: pointer;
       -webkit-app-region: no-drag;
     }
+
     .section-header button:hover {
       border-color: #888;
       color: #fff;
     }
+
     .window-list {
       flex: 1;
       overflow-y: auto;
       padding: 4px 0;
     }
+
     .window-item {
       padding: 8px 12px;
       border-bottom: 1px solid #111;
@@ -92,9 +106,11 @@
       align-items: center;
       -webkit-app-region: no-drag;
     }
+
     .window-item:hover {
       background: #111;
     }
+
     .window-item .title {
       font-size: 12px;
       white-space: nowrap;
@@ -103,11 +119,13 @@
       flex: 1;
       margin-right: 8px;
     }
+
     .window-item .actions {
       display: flex;
       gap: 4px;
       flex-shrink: 0;
     }
+
     .btn {
       background: none;
       border: 1px solid #444;
@@ -117,59 +135,73 @@
       cursor: pointer;
       -webkit-app-region: no-drag;
     }
+
     .btn:hover {
       border-color: #888;
       color: #fff;
     }
+
     .btn-add {
       border-color: #4a4;
       color: #6c6;
     }
+
     .btn-add:hover {
       border-color: #6c6;
       color: #8e8;
     }
+
     .btn-remove {
       border-color: #a44;
       color: #c66;
     }
+
     .btn-remove:hover {
       border-color: #c66;
       color: #e88;
     }
+
     .managed-item {
       border-left: 3px solid #333;
+      cursor: pointer;
     }
+
     .managed-item.active {
       border-left-color: #4f4;
       background: #0a1a0a;
     }
+
     .managed-item.inactive {
       border-left-color: #48f;
     }
+
     .active-badge {
       font-size: 9px;
       color: #4f4;
       font-weight: 600;
       margin-left: 6px;
     }
+
     .strip-badge {
       font-size: 9px;
       color: #48f;
       margin-left: 6px;
     }
+
     .empty-state {
       padding: 20px 12px;
       text-align: center;
       color: #555;
       font-size: 11px;
     }
+
     .divider {
       height: 1px;
       background: #333;
     }
   </style>
 </head>
+
 <body>
   <div class="header">
     <h1>STACK WINDOWS</h1>
@@ -224,6 +256,13 @@
         const isActive = (win.hwnd === activeHwnd);
         const item = document.createElement('div');
         item.className = 'window-item managed-item ' + (isActive ? 'active' : 'inactive');
+
+        // Add click listener to activate this window
+        item.onclick = async () => {
+          if (!isActive) {
+            await activateWindow(win.hwnd);
+          }
+        };
 
         const title = document.createElement('span');
         title.className = 'title';
@@ -341,6 +380,15 @@
       }
     }
 
+    async function activateWindow(hwnd) {
+      try {
+        await window.electronAPI.activateWindow(hwnd);
+        await refreshManaged();
+      } catch (e) {
+        console.error('Failed to activate:', e);
+      }
+    }
+
     // Listen for real-time state updates from the foreground monitor
     window.electronAPI.onStateUpdate((data) => {
       if (data.managed) {
@@ -359,4 +407,5 @@
     init();
   </script>
 </body>
+
 </html>
