Tamaño de ventanas es definido por la pila adm

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -291,10 +291,13 @@
       }
     }
 
+    let expandedHeight = window.innerHeight;
+
     // Toggle Visibility Logic
     async function toggleAvailableVisibility(forceState = null) {
       const listEl = document.getElementById('availableList');
       const btn = document.getElementById('toggleAvailableBtn');
+      const previousState = isAvailableHidden;
 
       if (forceState !== null) {
         isAvailableHidden = forceState;
@@ -303,11 +306,37 @@
       }
 
       if (isAvailableHidden) {
+        if (!previousState) expandedHeight = window.innerHeight;
+
         listEl.classList.add('hidden');
         btn.textContent = 'Show';
+
+        // Calculate needed height when contracted
+        setTimeout(async () => {
+          const h1 = document.querySelector('.header').offsetHeight;
+          const h2 = document.querySelector('.status-bar').offsetHeight;
+          const sections = document.querySelectorAll('.section');
+          const managedHeader = sections[0].querySelector('.section-header').offsetHeight;
+          const managedList = document.getElementById('managedList').offsetHeight;
+          const divider = document.querySelector('.divider').offsetHeight;
+          const availableHeader = sections[1].querySelector('.section-header').offsetHeight;
+
+          // Compute exact physical height required (with ~40px of OS padding frame)
+          let targetHeight = h1 + h2 + managedHeader + managedList + divider + availableHeader + 40;
+
+          if (window.electronAPI.resizeApp && forceState === null) {
+            await window.electronAPI.resizeApp(null, targetHeight);
+          }
+        }, 50);
+
       } else {
         listEl.classList.remove('hidden');
         btn.textContent = 'Hide';
+
+        if (window.electronAPI.resizeApp && forceState === null) {
+          // Restore to previous height
+          await window.electronAPI.resizeApp(null, expandedHeight > 400 ? expandedHeight : 800);
+        }
       }
 
       try {
