--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -280,12 +280,30 @@
       border-color: #888;
       outline: none;
     }
+
+    .color-picker-btn {
+      width: 18px;
+      height: 18px;
+      border: 1px solid #444;
+      border-radius: 3px;
+      background: #000000;
+      cursor: pointer;
+      -webkit-app-region: no-drag;
+    }
+
+    .color-picker-btn:hover {
+      border-color: #888;
+    }
   </style>
 </head>
 
 <body>
-  <div class="header">
+  <div class="header" style="display: flex; align-items: center; justify-content: space-between;">
     <h1 id="stackTitle" contenteditable="true" spellcheck="false" title="Click to rename stack">STACK WINDOWS</h1>
+    <div style="display: flex; align-items: center; gap: 8px; -webkit-app-region: no-drag;">
+      <div id="colorPickerBtn" class="color-picker-btn" onclick="document.getElementById('bgColorInput').click()" title="Change background color"></div>
+      <input type="color" id="bgColorInput" value="#000000" style="display: none;" onchange="onBackgroundColorChange(this.value)">
+    </div>
   </div>
 
 
@@ -349,6 +367,16 @@
 
     let isAvailableHidden = false;
     let customSizeEnabled = false;
+
+    async function onBackgroundColorChange(color) {
+      document.body.style.backgroundColor = color;
+      document.getElementById('colorPickerBtn').style.background = color;
+      try {
+        await window.electronAPI.setBackgroundColor(color);
+      } catch (e) {
+        console.error('Failed to set background color:', e);
+      }
+    }
 
     function toggleDimensionsSection() {
       const content = document.getElementById('dimsContent');
@@ -612,6 +640,12 @@
           }
         }
 
+        if (result.backgroundColor) {
+          document.body.style.backgroundColor = result.backgroundColor;
+          document.getElementById('colorPickerBtn').style.background = result.backgroundColor;
+          document.getElementById('bgColorInput').value = result.backgroundColor;
+        }
+
         renderManaged();
       } catch (e) {
         console.error('Failed to refresh managed:', e);
@@ -694,6 +728,12 @@
             widthInput.value = '';
             heightInput.value = '';
           }
+        }
+
+        if (data.backgroundColor) {
+          document.body.style.backgroundColor = data.backgroundColor;
+          document.getElementById('colorPickerBtn').style.background = data.backgroundColor;
+          document.getElementById('bgColorInput').value = data.backgroundColor;
         }
 
         renderManaged();
