ui: pill/capsule shape for all buttons and number inputs

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -82,8 +82,10 @@
       border: 1px solid #444;
       color: #aaa;
       font-size: 10px;
-      padding: 2px 8px;
+      padding: 3px 12px;
+      border-radius: 999px;
       cursor: pointer;
+      transition: all 0.15s ease;
       -webkit-app-region: no-drag;
     }
 
@@ -131,8 +133,10 @@
       border: 1px solid #444;
       color: #ccc;
       font-size: 10px;
-      padding: 3px 8px;
+      padding: 3px 12px;
+      border-radius: 999px;
       cursor: pointer;
+      transition: all 0.15s ease;
       -webkit-app-region: no-drag;
     }
 
@@ -271,8 +275,9 @@
       border: 1px solid #444;
       color: #fff;
       font-size: 12px;
-      padding: 4px 6px;
+      padding: 4px 10px;
       width: 80px;
+      border-radius: 999px;
       -webkit-app-region: no-drag;
     }
 
@@ -285,7 +290,7 @@
       width: 18px;
       height: 18px;
       border: 1px solid #444;
-      border-radius: 3px;
+      border-radius: 999px;
       background: #000000;
       cursor: pointer;
       -webkit-app-region: no-drag;
